--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.17.1",
     "googleapis": "^63.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.0",
     "nodemailer": "^6.4.11",
     "passport": "^0.4.1",
